# Enterprise-RAG-QA-system

./: .coveragerc  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: .pre-commit-config.yaml  tests.yml
src/core/: config.py  exceptions.py  logging_config.py
src/domain/: models.py
src/presentation/: gradio_ui.py
src/services/: document_service.py  rag_service.py
src/tests/: conftest.py
src/tests/integration/: test_rag_integration.py
src/tests/unit/: test_document_service.py  test_rag_service.py
